--- a/AvalonStudio/AvalonStudio.Models/AvalonStudio.Models.csproj
+++ b/AvalonStudio/AvalonStudio.Models/AvalonStudio.Models.csproj
@@ -2,19 +2,15 @@
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
-    <MinimumVisualStudioVersion>12.0</MinimumVisualStudioVersion>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5CDE5B11-41FA-4158-8D9A-D12531F32B4D}</ProjectGuid>
+    <ProjectGuid>{EACBFF14-438D-4311-8D8C-18E7E6769C8F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>AvalonStudio.Models</RootNamespace>
     <AssemblyName>AvalonStudio.Models</AssemblyName>
-    <DefaultLanguage>en-US</DefaultLanguage>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <TargetFrameworkProfile>Profile44</TargetFrameworkProfile>
-    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -34,13 +30,70 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <!-- A reference to the entire .NET Framework is automatically included -->
+    <Reference Include="System" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IConsole.cs" />
+    <Compile Include="AvalonStudioService.cs" />
+    <Compile Include="AvalonStudioSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Solutions\BitThunderApplicationProject.cs" />
+    <Compile Include="Solutions\Configuration.cs" />
+    <Compile Include="Solutions\Declaration.cs" />
+    <Compile Include="Solutions\HiddenProject.cs" />
+    <Compile Include="Solutions\Item.cs" />
+    <Compile Include="Solutions\Project.cs" />
+    <Compile Include="Solutions\ProjectFile.cs" />
+    <Compile Include="Solutions\ProjectFolder.cs" />
+    <Compile Include="Solutions\ProjectItem.cs" />
+    <Compile Include="Solutions\ProjectItemUserData.cs" />
+    <Compile Include="Solutions\Solution.cs" />
+    <Compile Include="Solutions\SolutionFolder.cs" />
+    <Compile Include="Solutions\TestProject.cs" />
+    <Compile Include="Solutions\TranslationUnitIndex.cs" />
+    <Compile Include="Solutions\UnloadedProject.cs" />
+    <Compile Include="Templates\ArmGCCLinkTemplate.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ArmGCCLinkTemplate.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Templates\ArmGCCLinkTemplateCode.cs" />
+    <Compile Include="Tools\ClangFormat.cs" />
+    <Compile Include="Tools\ClangRename.cs" />
+    <Compile Include="Tools\Compiler\ArmCompiler.cs" />
+    <Compile Include="Tools\Compiler\BitThunder.cs" />
+    <Compile Include="Tools\Compiler\ClangCompiler.cs" />
+    <Compile Include="Tools\Compiler\CustomProcessToolChain.cs" />
+    <Compile Include="Tools\Compiler\GccCompiler.cs" />
+    <Compile Include="Tools\Compiler\MinGW.cs" />
+    <Compile Include="Tools\Compiler\PIC32GCCToolChain.cs" />
+    <Compile Include="Tools\Compiler\PICXC32ToolChain.cs" />
+    <Compile Include="Tools\Compiler\StandardToolChain.cs" />
+    <Compile Include="Tools\Compiler\ToolChain.cs" />
+    <Compile Include="Tools\ConsoleWriter.cs" />
+    <Compile Include="Tools\IConsole.cs" />
+    <Compile Include="Utils\Extensions.cs" />
   </ItemGroup>
-  <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
+  <ItemGroup>
+    <None Include="Solutions\SolutionExplorer.cd" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Templates\ArmGCCLinkTemplate.tt">
+      <Generator>TextTemplatingFilePreprocessor</Generator>
+      <LastGenOutput>ArmGCCLinkTemplate.cs</LastGenOutput>
+    </Content>
+  </ItemGroup>
+  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
