--- a/AvalonStudio/AvalonStudio.Models/AvalonStudio.Models.csproj
+++ b/AvalonStudio/AvalonStudio.Models/AvalonStudio.Models.csproj
@@ -79,6 +79,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Solutions\SolutionExplorer.cd" />
+    <None Include="libclang.so">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
@@ -94,7 +97,7 @@
   <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\nclang\NClang\NClang.csproj">
-      <Project>{5ae560f9-0e8e-488e-b6c4-3c8196f9013a}</Project>
+      <Project>{5AE560F9-0E8E-488E-B6C4-3C8196F9013A}</Project>
       <Name>NClang</Name>
     </ProjectReference>
   </ItemGroup>
