--- a/AvalonStudio/AvalonStudio.Models/AvalonStudio.Models.csproj
+++ b/AvalonStudio/AvalonStudio.Models/AvalonStudio.Models.csproj
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\packages\LibGit2Sharp.NativeBinaries.1.0.81\build\LibGit2Sharp.NativeBinaries.props" Condition="Exists('..\packages\LibGit2Sharp.NativeBinaries.1.0.81\build\LibGit2Sharp.NativeBinaries.props')" />
+  <Import Project="..\packages\LibGit2Sharp.0.21.0.176\build\net40\LibGit2Sharp.props" Condition="Exists('..\packages\LibGit2Sharp.0.21.0.176\build\net40\LibGit2Sharp.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -11,6 +13,8 @@
     <AssemblyName>AvalonStudio.Models</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -30,6 +34,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="LibGit2Sharp, Version=0.21.0.176, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\LibGit2Sharp.0.21.0.176\lib\net40\LibGit2Sharp.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -43,9 +51,11 @@
   <ItemGroup>
     <Compile Include="AvalonStudioService.cs" />
     <Compile Include="AvalonStudioSettings.cs" />
+    <Compile Include="Constants.cs" />
     <Compile Include="LanguageServices\CodeCompletionData.cs" />
     <Compile Include="LanguageServices\CPlusPlus\CPlusPlusLanguageService.cs" />
     <Compile Include="LanguageServices\LanguageService.cs" />
+    <Compile Include="Platform\Platform.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Solutions\BitThunderApplicationProject.cs" />
     <Compile Include="Solutions\Configuration.cs" />
@@ -62,6 +72,8 @@
     <Compile Include="Solutions\TestProject.cs" />
     <Compile Include="Solutions\TranslationUnitIndex.cs" />
     <Compile Include="Solutions\UnloadedProject.cs" />
+    <Compile Include="Templates\PackageManager\Package.cs" />
+    <Compile Include="Templates\PackageManager\Repository.cs" />
     <Compile Include="Tools\ClangFormat.cs" />
     <Compile Include="Tools\ClangRename.cs" />
     <Compile Include="Tools\Compiler\ArmCompiler.cs" />
@@ -75,12 +87,56 @@
     <Compile Include="Tools\Compiler\StandardToolChain.cs" />
     <Compile Include="Tools\Compiler\ToolChain.cs" />
     <Compile Include="Tools\ConsoleWriter.cs" />
+    <Compile Include="Tools\Debuggers\BreakPoint.cs" />
+    <Compile Include="Tools\Debuggers\Commands.cs" />
+    <Compile Include="Tools\Debuggers\ContinueCommand.cs" />
+    <Compile Include="Tools\Debuggers\DataDisassembleCommand.cs" />
+    <Compile Include="Tools\Debuggers\DataListChangedRegistersCommand.cs" />
+    <Compile Include="Tools\Debuggers\DataListRegisterNamesCommand.cs" />
+    <Compile Include="Tools\Debuggers\DataListRegisterValuesCommand.cs" />
+    <Compile Include="Tools\Debuggers\DataReadMemoryBytesCommand.cs" />
+    <Compile Include="Tools\Debuggers\Debugger.cs" />
+    <Compile Include="Tools\Debuggers\DisassembledLine.cs" />
+    <Compile Include="Tools\Debuggers\ExecNextInstructionCommand.cs" />
+    <Compile Include="Tools\Debuggers\Extensions.cs" />
+    <Compile Include="Tools\Debuggers\FinishCommand.cs" />
+    <Compile Include="Tools\Debuggers\Frame.cs" />
+    <Compile Include="Tools\Debuggers\GDB.cs" />
+    <Compile Include="Tools\Debuggers\GDBResponse.cs" />
+    <Compile Include="Tools\Debuggers\InterruptCommand.cs" />
+    <Compile Include="Tools\Debuggers\JLinkDebugAdaptor.cs" />
+    <Compile Include="Tools\Debuggers\LocalDebugger.cs" />
+    <Compile Include="Tools\Debuggers\MonitorCommand.cs" />
+    <Compile Include="Tools\Debuggers\NameValuePair.cs" />
+    <Compile Include="Tools\Debuggers\ObjDump.cs" />
+    <Compile Include="Tools\Debuggers\OpenOCD.cs" />
+    <Compile Include="Tools\Debuggers\Register.cs" />
+    <Compile Include="Tools\Debuggers\RemoveBreakPointCommand.cs" />
+    <Compile Include="Tools\Debuggers\RunCommand.cs" />
+    <Compile Include="Tools\Debuggers\SetBreakPointCommand.cs" />
+    <Compile Include="Tools\Debuggers\SetCommand.cs" />
+    <Compile Include="Tools\Debuggers\StackListFramesCommand.cs" />
+    <Compile Include="Tools\Debuggers\StackListVariablesCommand.cs" />
+    <Compile Include="Tools\Debuggers\StepIntoCommand.cs" />
+    <Compile Include="Tools\Debuggers\StepOverCommand.cs" />
+    <Compile Include="Tools\Debuggers\StopRecord.cs" />
+    <Compile Include="Tools\Debuggers\TargetDownloadCommand.cs" />
+    <Compile Include="Tools\Debuggers\TargetSelectCommand.cs" />
+    <Compile Include="Tools\Debuggers\VarCreateCommand.cs" />
+    <Compile Include="Tools\Debuggers\VarDeleteCommand.cs" />
+    <Compile Include="Tools\Debuggers\VarEvaluateExpressionCommand.cs" />
+    <Compile Include="Tools\Debuggers\Variable.cs" />
+    <Compile Include="Tools\Debuggers\VariableObject.cs" />
+    <Compile Include="Tools\Debuggers\VarListChildrenCommand.cs" />
+    <Compile Include="Tools\Debuggers\VarUpdateCommand.cs" />
+    <Compile Include="Tools\Debuggers\VerSetFormatCommand.cs" />
     <Compile Include="Tools\IConsole.cs" />
     <Compile Include="Utils\Extensions.cs" />
     <Compile Include="Templates\ArmGCCLinkTemplate.cs" />
     <Compile Include="Templates\ArmGCCLinkTemplateCode.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="packages.config" />
     <None Include="Solutions\SolutionExplorer.cd" />
     <None Include="libclang.so">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -104,4 +160,11 @@
       <Name>NClang</Name>
     </ProjectReference>
   </ItemGroup>
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\packages\LibGit2Sharp.0.21.0.176\build\net40\LibGit2Sharp.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\LibGit2Sharp.0.21.0.176\build\net40\LibGit2Sharp.props'))" />
+    <Error Condition="!Exists('..\packages\LibGit2Sharp.NativeBinaries.1.0.81\build\LibGit2Sharp.NativeBinaries.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\LibGit2Sharp.NativeBinaries.1.0.81\build\LibGit2Sharp.NativeBinaries.props'))" />
+  </Target>
 </Project>
